--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="./assets/js/main.js"></script>
-    
+    <h1>Hello Git</h1>
+
+  <script src="./assets/js/main.js"></script>
 </body>
 </html>
